# DijkstraSPF

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
apps/: dijkstra.cpp  main.cpp
include/dijkstra/: AbstractDijkstra.hpp  Edge.hpp  Node.hpp
include/spf/: Edge.hpp  Graph.hpp  Node.hpp  spf.hpp
src/: Edge.cpp  Node.cpp
test/: test_edge.cpp  test_node.cpp
